// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {currency} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": undefined,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#191919",
              "fontFamily": undefined,
              "textAlignVertical": "center",
            },
            Object {
              "fontFamily": undefined,
              "fontSize": 12.8,
            },
            Object {
              "color": undefined,
            },
            Object {
              "paddingLeft": undefined,
            },
          ]
        }
      >
        $
      </Text>
    </View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="numeric"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          Object {
            "textAlign": "right",
          },
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        Object {
          "backgroundColor": undefined,
        },
        false,
        false,
        false,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={false}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          Object {
            "color": undefined,
          },
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        Object {
          "borderColor": "#e85a7e",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Text />
  </View>
</View>
`;

exports[`<Input> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#191919",
          "fontFamily": undefined,
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 11.2,
        },
        Object {
          "color": undefined,
        },
        Object {
          "marginTop": undefined,
          "maxWidth": "100%",
          "paddingLeft": 0,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<Input> when {icon} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingHorizontal": undefined,
        }
      }
    >
      <Text />
    </View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {keyboard} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="numeric"
      keyboardType="numeric"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <Text
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#191919",
          "fontFamily": undefined,
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 11.2,
        },
        Object {
          "color": undefined,
        },
        Object {
          "color": "#191919",
          "fontWeight": "700",
          "marginBottom": 4,
        },
      ]
    }
  >
    Hello World
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {lines} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={true}
      numberOfLines={5}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {required} & {requiredIcon} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Text />
  </View>
</View>
`;

exports[`<Input> when {required} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
        "width": 256,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {valid} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        Object {
          "borderColor": undefined,
        },
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="soyjavi"
    />
    <Text />
  </View>
</View>
`;

exports[`<Input> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": undefined,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": undefined,
          "borderRadius": 2,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 4,
        },
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboard="default"
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "borderWidth": 0,
            "color": "#191919",
            "flex": 1,
            "fontFamily": undefined,
            "fontSize": 12.8,
            "minHeight": 33.6,
            "paddingHorizontal": undefined,
            "paddingVertical": 6,
            "width": "100%",
          },
          false,
          undefined,
          undefined,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="soyjavi"
    />
  </View>
</View>
`;
